# Nanokappa

./: .flake8  .gitignore  .pre-commit-config.yaml  Constants.py  Geometry.py  LICENSE.md  POSCAR-unitcell  Phonon.py  Population.py  README.md  argument_parser.py  convergence.txt  environment-dev.yaml  general_test_file.py  hello_world.py  main_program.py  mcphonon.py  modes_data_view.ipynb  modules.txt  nanokappa.py  parallel_exec.py  parameters.txt  parameters_extra.txt  parameters_linux.txt  parameters_test.txt  parameters_windows.txt  parameters_windows_tilted.txt  pyproject.toml  requirements.txt  script  script.slurm  script2  serial_exec.py  set_environment  setup.cfg  setup.py  test_notebook.ipynb  thermal_cond_module.py  viewgeo.ipynb  viewgeo.py  (+2 more)
.ipynb_checkpoints/: test_notebook-checkpoint.ipynb
classes/: Constants.py  Geometry.py  Jitted.py  Mesh.py  Optimiser.py  Phonon.py  Population.py  Visualisation.py
materials/Si/: POSCAR
nanokappa/: __init__.py  argument_parser.py  nanokappa.py  parameters_test.txt
nanokappa/base/: __init__.py  model.py  vector.py
nanokappa/classes/: Constants.py
optimiser/: cluster_params.txt  csv_funcs.py  local_params.txt  run_csv.py  simulations.csv  simulations.xlsx
routines/: geo3d.py  subvolumes.py
set_env/: README_PYEMBREE.txt  install_log.txt  modules.txt  requirements.txt  set_env.py  set_env_script.sh  set_environment
std_geo/: shape2S2.STL
style/: dark.mplstyle
subvol_classifiers/: slice_10_1_1.pickle  slice_15_1_1.pickle
tutorials/: Tutorial-GeoGen.ipynb  geo_gen.py  howto.md  my_mesh.stl
(+30 files in other folders)
