[metadata]
name = nanokappa
version = 0.1.0
author = Bruno Hartmann da Silva
description = Nanoscale Monte Carlo simulation tool.
long_description = file: README.md, HISTORY.md
home-page = http://github.com/brunohs1993/Nanokappa.git
license = MIT
license-file = LICENSE
keywords = nanoscale, phonons, monte carlo
classifiers =
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: Other/Proprietary License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.10
